fixed whitespace and added icons for appstores

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body a:hover
 {
   position: relative;
   width: 100%;
-  height: 100%;
+  height: auto;
 }
 
 .content-1170 img
@@ -241,7 +241,7 @@ body a:hover
 {
   background: #f2f2f2;
   width: 65%;
-  height: 450px;
+  height: 100%;
   padding: 2.5%;
 }
 
@@ -358,6 +358,31 @@ h1.big-title
   bottom: 0;
   width: 100%;
 }
+.appstore-icons
+{
+  z-index: 10;
+  position: absolute;
+  width: 360px;
+  height: 55px;
+  left: 60%;
+  top: 70vh;
+}
+.appstore-icons .google
+{
+  position: absolute;
+  width: 50%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+.appstore-icons .apple
+{
+  position: absolute;
+  width: 50%;
+  left: 50%;
+  height: 100%;
+  top: 0;
+}
 
 /* END HOME SECTION */
 
@@ -384,9 +409,8 @@ h1.big-title
 {
   position: relative;
   top: 0;
-  padding-bottom: 600px;
-  padding-top: 100px;
-  padding-right: 100px;
+  padding: 100px;
+  padding: 100px;
 }
 
 #howitworks .section-title-holder span
@@ -456,7 +480,6 @@ h1.big-title
 #ourcustomer .section-content-holder
 {
   width: 65%;
-  padding-bottom: 600px;
 }
 #ourcustomer .content-wrapper
 {
@@ -651,12 +674,12 @@ h1.big-title
     {
         margin-left: 250px;
     }
-*/
+
     .section-content-holder.left
     {
         margin-top: 250px;
     }
-
+*/
     .section-content-holder
     {
         width: 710px;
@@ -745,6 +768,71 @@ h1.big-title
 }
 
 @media screen and (max-width: 1020px) {
+
+    .intro-page
+    {
+      min-height: 0;
+      background-position: right;
+    }
+
+    .section
+    {
+      position: static !important;
+      z-index: 0 !important;
+    }
+
+    h1.big-title
+    {
+      font-size: 50px;
+      padding-top: 50px;
+      padding-left: 100px;
+      position: relative;
+      float:none;
+      left: 0;
+      width: 75%;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .title-desc
+    {
+      font-size: 19px;
+      line-height: 23px;
+      float: none;
+      width: 75%;
+      padding: 100px;
+      text-align: center;
+      left: 25%;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .appstore-icons
+    {
+      z-index: 10;
+      position: absolute;
+      width: 360px;
+      height: 55px;
+      left: calc(50vw - 180px);
+      top: 70vh;
+    }
+    .appstore-icons .google
+    {
+      position: absolute;
+      width: 50%;
+      height: 100%;
+      top: 0;
+      left: 0;
+    }
+    .appstore-icons .apple
+    {
+      position: absolute;
+      width: 50%;
+      left: 50%;
+      height: 100%;
+      top: 0;
+    }
+
   #howitworks .section-content-holder
   {
     padding-left: 100px;
@@ -754,7 +842,7 @@ h1.big-title
     padding-bottom: 0px;
     width: 100%;
     padding: 100px;
-    padding-bottom: 600px;
+    padding-bottom: 0px;
   }
   .mob-menu
   {
@@ -1106,16 +1194,17 @@ h1.big-title
   #ourcustomer .section-content-holder
   {
     width: 100%;
+    height: 400px;
   }
   #ourcustomer .content-wrapper
   {
     width: 90%;
     left: 5%;
-    height: auto;
+    height: 400px;
     text-align: center;
     position: absolute;
-    padding: 0;
-    padding-bottom: 100px;
+    padding: 100px;
+    padding-top: 0px;
   }
   #ourcustomer .logo-box4
   {
@@ -1126,7 +1215,7 @@ h1.big-title
   }
   #ourcustomer .content-wrapper p
   {
-    font-size: 14px;
+    font-size: 16px;
     line-height: 18px;
     display: block;
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -1167,6 +1256,17 @@ h1.big-title
     margin-right: auto;
     padding: 30px;
   }
+
+  #ourcustomer .content-wrapper
+  {
+    width: 90%;
+    left: 5%;
+    height: 400px;
+    text-align: center;
+    position: absolute;
+    padding: 50px;
+    padding-top: 0px;
+  }
 }
 
 @media screen and (max-width: 399px) {
@@ -1195,6 +1295,33 @@ h1.big-title
     color: #ff9300;
     width: 70%;
   }
+
+  .appstore-icons
+  {
+    z-index: 10;
+    position: absolute;
+    width: 240px;
+    height: 37px;
+    left: calc(50vw - 120px);
+    top: 75vh;
+  }
+  .appstore-icons .google
+  {
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    top: 0;
+    left: 0;
+  }
+  .appstore-icons .apple
+  {
+    position: absolute;
+    width: 50%;
+    left: 50%;
+    height: 100%;
+    top: 0;
+  }
+
   #howitworks .section-content-holder
   {
     padding: 30px;
@@ -1211,11 +1338,11 @@ h1.big-title
   {
     width: 90%;
     left: 5%;
-    height: auto;
+    height: 400px;
     text-align: center;
     position: absolute;
-    padding: 0;
-    padding-bottom: 30px;
+    padding: 30px;
+    padding-top: 0px;
   }
   #ourcustomer .logo-box4
   {
@@ -1226,7 +1353,7 @@ h1.big-title
   }
   #ourcustomer .content-wrapper p
   {
-    font-size: 8px;
+    font-size: 14px;
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
     text-align: center;
     color: #1B2834;
